--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -35,77 +35,38 @@
                             </thead>
 
                             <tbody>
+                                {% for cart_item in cart_items%}
                                 <tr>
                                     <td class="product-col">
                                         <div class="product">
                                             <figure class="product-media">
                                                 <a href="#">
-                                                    <img src="assets/images/products/table/product-1.jpg"
+                                                    <img src="{{cart_item.product.image.url}}"
                                                         alt="Product image">
                                                 </a>
                                             </figure>
 
                                             <h3 class="product-title">
-                                                <a href="#">Beige knitted elastic runner shoes</a>
+                                                <a href="#">{{cart_item.product.name}}</a>
                                             </h3><!-- End .product-title -->
                                         </div><!-- End .product -->
                                     </td>
-                                    <td class="price-col">$84.00</td>
+                                    <td class="price-col">${{cart_item.product.price}}</td>
                                     <td class="quantity-col">
                                         <div class="cart-product-quantity">
-                                            <input type="number" class="form-control" value="1" min="1" max="10"
+                                            <input type="number" class="form-control" value="{{cart_item.quantity}}" min="1" max="10"
                                                 step="1" data-decimals="0" required>
                                         </div><!-- End .cart-product-quantity -->
                                     </td>
-                                    <td class="total-col">$84.00</td>
+                                    <td class="total-col">${{cart_item.sub_total}}</td>
                                     <td class="remove-col"><button class="btn-remove"><i
                                                 class="icon-close"></i></button></td>
                                 </tr>
-                                <tr>
-                                    <td class="product-col">
-                                        <div class="product">
-                                            <figure class="product-media">
-                                                <a href="#">
-                                                    <img src="assets/images/products/table/product-2.jpg"
-                                                        alt="Product image">
-                                                </a>
-                                            </figure>
-
-                                            <h3 class="product-title">
-                                                <a href="#">Blue utility pinafore denim dress</a>
-                                            </h3><!-- End .product-title -->
-                                        </div><!-- End .product -->
-                                    </td>
-                                    <td class="price-col">$76.00</td>
-                                    <td class="quantity-col">
-                                        <div class="cart-product-quantity">
-                                            <input type="number" class="form-control" value="1" min="1" max="10"
-                                                step="1" data-decimals="0" required>
-                                        </div><!-- End .cart-product-quantity -->
-                                    </td>
-                                    <td class="total-col">$76.00</td>
-                                    <td class="remove-col"><button class="btn-remove"><i
-                                                class="icon-close"></i></button></td>
-                                </tr>
+                              {% endfor %}
                             </tbody>
                         </table><!-- End .table table-wishlist -->
 
-                        <div class="cart-bottom">
-                            <div class="cart-discount">
-                                <form action="#">
-                                    <div class="input-group">
-                                        <input type="text" class="form-control" required placeholder="coupon code">
-                                        <div class="input-group-append">
-                                            <button class="btn btn-outline-primary-2" type="submit"><i
-                                                    class="icon-long-arrow-right"></i></button>
-                                        </div><!-- .End .input-group-append -->
-                                    </div><!-- End .input-group -->
-                                </form>
-                            </div><!-- End .cart-discount -->
-
-                            <a href="#" class="btn btn-outline-dark-2"><span>UPDATE CART</span><i
-                                    class="icon-refresh"></i></a>
-                        </div><!-- End .cart-bottom -->
+                        
                     </div><!-- End .col-lg-9 -->
                     <aside class="col-lg-3">
                         <div class="summary summary-cart">
