--- a/store/templates/store/product-detail.html
+++ b/store/templates/store/product-detail.html
@@ -172,7 +172,7 @@
                                     <div class="product-details-action">
                                         {% if single_product.stock <= 0 %} <span>Out of stock</span>
                                             {% else %}
-                                            <a href="#" class="btn-product btn-cart"><span>add to cart</span></a>
+                                            <a href="{% url 'cart:add_cart' single_product.id %}" class="btn-product btn-cart"><span>add to cart</span></a>
                                             {% endif %}
 
                                             <div class="details-action-wrapper">
