--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -41,8 +41,7 @@
                                         <div class="product">
                                             <figure class="product-media">
                                                 <a href="#">
-                                                    <img src="{{cart_item.product.image.url}}"
-                                                        alt="Product image">
+                                                    <img src="{{cart_item.product.image.url}}" alt="Product image">
                                                 </a>
                                             </figure>
 
@@ -51,22 +50,42 @@
                                             </h3><!-- End .product-title -->
                                         </div><!-- End .product -->
                                     </td>
-                                    <td class="price-col">${{cart_item.product.price}}</td>
+                                    <td class="price-col">Rs. {{cart_item.product.price}}</td>
+
                                     <td class="quantity-col">
                                         <div class="cart-product-quantity">
-                                            <input type="number" class="form-control" value="{{cart_item.quantity}}" min="1" max="10"
-                                                step="1" data-decimals="0" required>
+                                            <div class="input-group  input-spinner">
+                                                <div class="input-group-prepend">
+                                                    <a href="{% url 'cart:remove_cart' cart_item.product.id %}" style="min-width: 2.5rem"
+                                                        class="btn btn-decrement btn-spinner" type="button">
+                                                        <i class="icon-minus"></i></a>
+                                                </div>
+                                                <input type="text" value="{{ cart_item.quantity }}"
+                                                    style="text-align: center" class="form-control " required=""
+                                                    placeholder="">
+
+                                                <div class="input-group-append">
+                                                    <a href="{% url 'cart:add_cart' cart_item.product.id %}" style="min-width: 2.5rem"
+                                                        class="btn btn-increment btn-spinner" type="button"><i
+                                                            class="icon-plus"></i>
+                                                </a>
+
+                                                </div>
+                                            </div>
                                         </div><!-- End .cart-product-quantity -->
+
                                     </td>
-                                    <td class="total-col">${{cart_item.sub_total}}</td>
-                                    <td class="remove-col"><button class="btn-remove"><i
-                                                class="icon-close"></i></button></td>
+
+
+                                    <td class="total-col">Rs. {{cart_item.sub_total}}</td>
+                                    <td class="remove-col"><a href="{% url 'cart:remove_cart_item' cart_item.product.id %}" class="btn-remove"><i
+                                                class="icon-close"></i></a></td>
                                 </tr>
-                              {% endfor %}
+                                {% endfor %}
                             </tbody>
                         </table><!-- End .table table-wishlist -->
 
-                        
+
                     </div><!-- End .col-lg-9 -->
                     <aside class="col-lg-3">
                         <div class="summary summary-cart">
@@ -76,8 +95,12 @@
                                 <tbody>
                                     <tr class="summary-subtotal">
                                         <td>Subtotal:</td>
-                                        <td>$160.00</td>
+                                        <td>Rs. {{total}}</td>
                                     </tr><!-- End .summary-subtotal -->
+                                    <tr class="summary-subtotal">
+                                        <td>Tax:</td>
+                                        <td>Rs. {{tax}}</td>
+                                    </tr>
                                     <tr class="summary-shipping">
                                         <td>Shipping:</td>
                                         <td>&nbsp;</td>
@@ -92,42 +115,20 @@
                                                     Shipping</label>
                                             </div><!-- End .custom-control -->
                                         </td>
-                                        <td>$0.00</td>
+                                        <td>Rs. 0.00</td>
                                     </tr><!-- End .summary-shipping-row -->
 
-                                    <tr class="summary-shipping-row">
-                                        <td>
-                                            <div class="custom-control custom-radio">
-                                                <input type="radio" id="standart-shipping" name="shipping"
-                                                    class="custom-control-input">
-                                                <label class="custom-control-label"
-                                                    for="standart-shipping">Standart:</label>
-                                            </div><!-- End .custom-control -->
-                                        </td>
-                                        <td>$10.00</td>
-                                    </tr><!-- End .summary-shipping-row -->
-
-                                    <tr class="summary-shipping-row">
-                                        <td>
-                                            <div class="custom-control custom-radio">
-                                                <input type="radio" id="express-shipping" name="shipping"
-                                                    class="custom-control-input">
-                                                <label class="custom-control-label"
-                                                    for="express-shipping">Express:</label>
-                                            </div><!-- End .custom-control -->
-                                        </td>
-                                        <td>$20.00</td>
-                                    </tr><!-- End .summary-shipping-row -->
-
-                                    <tr class="summary-shipping-estimate">
+                                    
+                                    <!-- <tr class="summary-shipping-estimate">
                                         <td>Estimate for Your Country<br> <a href="dashboard.html">Change address</a>
                                         </td>
                                         <td>&nbsp;</td>
-                                    </tr><!-- End .summary-shipping-estimate -->
+                                    </tr> -->
+                                    <!-- End .summary-shipping-estimate -->
 
                                     <tr class="summary-total">
                                         <td>Total:</td>
-                                        <td>$160.00</td>
+                                        <td>Rs. {{grand_total}}</td>
                                     </tr><!-- End .summary-total -->
                                 </tbody>
                             </table><!-- End .table table-summary -->
