managed context processor for cart

--- a/templates/base.html
+++ b/templates/base.html
@@ -252,7 +252,7 @@
     </div><!-- End .mobile-menu-container -->
 
     {% include 'modal/signin.html' %}
-    {% include 'modal/newsletter.html' %}
+    <!-- {% include 'modal/newsletter.html' %} -->
 
    
     <!-- Plugins JS File -->
