--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -19,6 +19,13 @@
     </nav><!-- End .breadcrumb-nav -->
 
     <div class="page-content">
+        {% if not cart_items%}
+        <h2 class="text-center">you shopping cart is empty</h2>
+        <a href="{% url 'store:store' %}" class="btn btn-outline-dark-2 btn-block mb-3"><span>CONTINUE
+            SHOPPING</span><i class="icon-refresh"></i></a>
+
+        {% else %}
+
         <div class="cart">
             <div class="container">
                 <div class="row">
@@ -35,6 +42,7 @@
                             </thead>
 
                             <tbody>
+
                                 {% for cart_item in cart_items%}
                                 <tr>
                                     <td class="product-col">
@@ -46,7 +54,7 @@
                                             </figure>
 
                                             <h3 class="product-title">
-                                                <a href="#">{{cart_item.product.name}}</a>
+                                                <a href="{{ cart_item.product.get_url }}">{{cart_item.product.name}}</a>
                                             </h3><!-- End .product-title -->
                                         </div><!-- End .product -->
                                     </td>
@@ -56,8 +64,9 @@
                                         <div class="cart-product-quantity">
                                             <div class="input-group  input-spinner">
                                                 <div class="input-group-prepend">
-                                                    <a href="{% url 'cart:remove_cart' cart_item.product.id %}" style="min-width: 2.5rem"
-                                                        class="btn btn-decrement btn-spinner" type="button">
+                                                    <a href="{% url 'cart:remove_cart' cart_item.product.id %}"
+                                                        style="min-width: 2.5rem" class="btn btn-decrement btn-spinner"
+                                                        type="button">
                                                         <i class="icon-minus"></i></a>
                                                 </div>
                                                 <input type="text" value="{{ cart_item.quantity }}"
@@ -65,10 +74,10 @@
                                                     placeholder="">
 
                                                 <div class="input-group-append">
-                                                    <a href="{% url 'cart:add_cart' cart_item.product.id %}" style="min-width: 2.5rem"
-                                                        class="btn btn-increment btn-spinner" type="button"><i
-                                                            class="icon-plus"></i>
-                                                </a>
+                                                    <a href="{% url 'cart:add_cart' cart_item.product.id %}"
+                                                        style="min-width: 2.5rem" class="btn btn-increment btn-spinner"
+                                                        type="button"><i class="icon-plus"></i>
+                                                    </a>
 
                                                 </div>
                                             </div>
@@ -78,8 +87,9 @@
 
 
                                     <td class="total-col">Rs. {{cart_item.sub_total}}</td>
-                                    <td class="remove-col"><a href="{% url 'cart:remove_cart_item' cart_item.product.id %}" class="btn-remove"><i
-                                                class="icon-close"></i></a></td>
+                                    <td class="remove-col"><a
+                                            href="{% url 'cart:remove_cart_item' cart_item.product.id %}"
+                                            class="btn-remove"><i class="icon-close"></i></a></td>
                                 </tr>
                                 {% endfor %}
                             </tbody>
@@ -118,7 +128,7 @@
                                         <td>Rs. 0.00</td>
                                     </tr><!-- End .summary-shipping-row -->
 
-                                    
+
                                     <!-- <tr class="summary-shipping-estimate">
                                         <td>Estimate for Your Country<br> <a href="dashboard.html">Change address</a>
                                         </td>
@@ -137,12 +147,13 @@
                                 CHECKOUT</a>
                         </div><!-- End .summary -->
 
-                        <a href="category.html" class="btn btn-outline-dark-2 btn-block mb-3"><span>CONTINUE
+                        <a href="{% url 'store:store' %}" class="btn btn-outline-dark-2 btn-block mb-3"><span>CONTINUE
                                 SHOPPING</span><i class="icon-refresh"></i></a>
                     </aside><!-- End .col-lg-3 -->
                 </div><!-- End .row -->
             </div><!-- End .container -->
         </div><!-- End .cart -->
+        {% endif %}
     </div><!-- End .page-content -->
 </main><!-- End .main -->
 {% endblock content%}
