--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -23,19 +23,15 @@
                                     </div><!-- End .header-menu -->
                                 </div>
                             </li>
-                            <li>
-                                <div class="header-dropdown">
-                                    <a href="#">English</a>
-                                    <div class="header-menu">
-                                        <ul>
-                                            <li><a href="#">English</a></li>
-                                            <li><a href="#">French</a></li>
-                                            <li><a href="#">Spanish</a></li>
-                                        </ul>
-                                    </div><!-- End .header-menu -->
-                                </div>
-                            </li>
+                            
+                            {% if user.id is None%}
+
                             <li><a href="#signin-modal" data-toggle="modal">Sign in / Sign up</a></li>
+                            {% else %}
+                            <li><a href="#">Welcome {{user.username}}!</a></li>
+                            <li><a href="{% url 'auth:logout' %}">Logout</a></li>
+
+                            {% endif %}
                         </ul>
                     </li>
                 </ul><!-- End .top-menu -->
@@ -192,165 +188,12 @@
                         <li class="megamenu-container active">
                             <a href="index.html" class="sf-with-ul">Home</a>
 
-                            <div class="megamenu demo">
-                                <div class="menu-col">
-                                    <div class="menu-title">Choose your demo</div><!-- End .menu-title -->
-
-                                    <div class="demo-list">
-                                        <div class="demo-item">
-                                            <a href="index-1.html">
-                                                <span class="demo-bg"
-                                                    style="background-image: url(assets/images/menu/demos/1.jpg);"></span>
-                                                <span class="demo-title">01 - furniture store</span>
-                                            </a>
-                                        </div><!-- End .demo-item -->
-
-                                        <div class="demo-item">
-                                            <a href="index-2.html">
-                                                <span class="demo-bg"
-                                                    style="background-image: url(assets/images/menu/demos/2.jpg);"></span>
-                                                <span class="demo-title">02 - furniture store</span>
-                                            </a>
-                                        </div><!-- End .demo-item -->
-
-                                        <div class="demo-item">
-                                            <a href="index-3.html">
-                                                <span class="demo-bg"
-                                                    style="background-image: url(assets/images/menu/demos/3.jpg);"></span>
-                                                <span class="demo-title">03 - electronic store</span>
-                                            </a>
-                                        </div><!-- End .demo-item -->
-
-                                        <div class="demo-item">
-                                            <a href="index-4.html">
-                                                <span class="demo-bg"
-                                                    style="background-image: url(assets/images/menu/demos/4.jpg);"></span>
-                                                <span class="demo-title">04 - electronic store</span>
-                                            </a>
-                                        </div><!-- End .demo-item -->
-
-                                        <div class="demo-item">
-                                            <a href="index-5.html">
-                                                <span class="demo-bg"
-                                                    style="background-image: url(assets/images/menu/demos/5.jpg);"></span>
-                                                <span class="demo-title">05 - fashion store</span>
-                                            </a>
-                                        </div><!-- End .demo-item -->
-
-                                        
-
-                                        <div class="demo-item hidden">
-                                            <a href="index-11.html">
-                                                <span class="demo-bg"
-                                                    style="background-image: url(assets/images/menu/demos/11.jpg);"></span>
-                                                <span class="demo-title">11 - furniture simple store</span>
-                                            </a>
-                                        </div><!-- End .demo-item -->
-
-                                        <div class="demo-item hidden">
-                                            <a href="index-12.html">
-                                                <span class="demo-bg"
-                                                    style="background-image: url(assets/images/menu/demos/12.jpg);"></span>
-                                                <span class="demo-title">12 - fashion simple store</span>
-                                            </a>
-                                        </div><!-- End .demo-item -->
-
-                                        <div class="demo-item hidden">
-                                            <a href="index-13.html">
-                                                <span class="demo-bg"
-                                                    style="background-image: url(assets/images/menu/demos/13.jpg);"></span>
-                                                <span class="demo-title">13 - market</span>
-                                            </a>
-                                        </div><!-- End .demo-item -->
-
-                                       
-                                        <div class="demo-item hidden">
-                                            <a href="index-20.html">
-                                                <span class="demo-bg"
-                                                    style="background-image: url(assets/images/menu/demos/20.jpg);"></span>
-                                                <span class="demo-title">20 - book store</span>
-                                            </a>
-                                        </div><!-- End .demo-item -->
-
-                                       
-                                    </div><!-- End .demo-list -->
-
-                                    <div class="megamenu-action text-center">
-                                        <a href="#" class="btn btn-outline-primary-2 view-all-demos"><span>View All
-                                                Demos</span><i class="icon-long-arrow-right"></i></a>
-                                    </div><!-- End .text-center -->
-                                </div><!-- End .menu-col -->
-                            </div><!-- End .megamenu -->
+                            
                         </li>
                         <li>
                             <a href="category.html" class="sf-with-ul">Shop</a>
 
-                            <div class="megamenu megamenu-md">
-                                <div class="row no-gutters">
-                                    <div class="col-md-8">
-                                        <div class="menu-col">
-                                            <div class="row">
-                                                <div class="col-md-6">
-                                                    <div class="menu-title">Shop with sidebar</div>
-                                                    <!-- End .menu-title -->
-                                                    <ul>
-                                                        <li><a href="category-list.html">Shop List</a></li>
-                                                        <li><a href="category-2cols.html">Shop Grid 2 Columns</a></li>
-                                                        <li><a href="category.html">Shop Grid 3 Columns</a></li>
-                                                        <li><a href="category-4cols.html">Shop Grid 4 Columns</a></li>
-                                                        <li><a href="category-market.html"><span>Shop Market<span
-                                                                        class="tip tip-new">New</span></span></a></li>
-                                                    </ul>
-
-                                                    <div class="menu-title">Shop no sidebar</div>
-                                                    <!-- End .menu-title -->
-                                                    <ul>
-                                                        <li><a href="category-boxed.html"><span>Shop Boxed No
-                                                                    Sidebar<span
-                                                                        class="tip tip-hot">Hot</span></span></a></li>
-                                                        <li><a href="category-fullwidth.html">Shop Fullwidth No
-                                                                Sidebar</a></li>
-                                                    </ul>
-                                                </div><!-- End .col-md-6 -->
-
-                                                <div class="col-md-6">
-                                                    <div class="menu-title">Product Category</div>
-                                                    <!-- End .menu-title -->
-                                                    <ul>
-                                                        <li><a href="product-category-boxed.html">Product Category
-                                                                Boxed</a></li>
-                                                        <li><a href="product-category-fullwidth.html"><span>Product
-                                                                    Category Fullwidth<span
-                                                                        class="tip tip-new">New</span></span></a></li>
-                                                    </ul>
-                                                    <div class="menu-title">Shop Pages</div><!-- End .menu-title -->
-                                                    <ul>
-                                                        <li><a href="cart.html">Cart</a></li>
-                                                        <li><a href="checkout.html">Checkout</a></li>
-                                                        <li><a href="wishlist.html">Wishlist</a></li>
-                                                        <li><a href="dashboard.html">My Account</a></li>
-                                                        <li><a href="#">Lookbook</a></li>
-                                                    </ul>
-                                                </div><!-- End .col-md-6 -->
-                                            </div><!-- End .row -->
-                                        </div><!-- End .menu-col -->
-                                    </div><!-- End .col-md-8 -->
-
-                                    <div class="col-md-4">
-                                        <div class="banner banner-overlay">
-                                            <a href="category.html" class="banner banner-menu">
-                                                <img src="{% static 'assets/images/menu/banner-1.jpg' %} " alt="Banner">
-
-                                                <div class="banner-content banner-content-top">
-                                                    <div class="banner-title text-white">Last
-                                                        <br>Chance<br><span><strong>Sale</strong></span></div>
-                                                    <!-- End .banner-title -->
-                                                </div><!-- End .banner-content -->
-                                            </a>
-                                        </div><!-- End .banner banner-overlay -->
-                                    </div><!-- End .col-md-4 -->
-                                </div><!-- End .row -->
-                            </div><!-- End .megamenu megamenu-md -->
+                           
                         </li>
                         <li>
                             <a href="product.html" class="sf-with-ul">Product</a>
@@ -360,17 +203,7 @@
                                     <div class="col-md-6">
                                         <div class="menu-col">
                                             <div class="menu-title">Product Details</div><!-- End .menu-title -->
-                                            <ul>
-                                                <li><a href="product.html">Default</a></li>
-                                                <li><a href="product-centered.html">Centered</a></li>
-                                                <li><a href="product-extended.html"><span>Extended Info<span
-                                                                class="tip tip-new">New</span></span></a></li>
-                                                <li><a href="product-gallery.html">Gallery</a></li>
-                                                <li><a href="product-sticky.html">Sticky Info</a></li>
-                                                <li><a href="product-sidebar.html">Boxed With Sidebar</a></li>
-                                                <li><a href="product-fullwidth.html">Full Width</a></li>
-                                                <li><a href="product-masonry.html">Masonry Sticky Info</a></li>
-                                            </ul>
+
                                         </div><!-- End .menu-col -->
                                     </div><!-- End .col-md-6 -->
 
@@ -419,43 +252,6 @@
                         <li>
                             <a href="blog.html" class="sf-with-ul">Blog</a>
 
-                            <ul>
-                                <li><a href="blog.html">Classic</a></li>
-                                <li><a href="blog-listing.html">Listing</a></li>
-                                <li>
-                                    <a href="#">Grid</a>
-                                    <ul>
-                                        <li><a href="blog-grid-2cols.html">Grid 2 columns</a></li>
-                                        <li><a href="blog-grid-3cols.html">Grid 3 columns</a></li>
-                                        <li><a href="blog-grid-4cols.html">Grid 4 columns</a></li>
-                                        <li><a href="blog-grid-sidebar.html">Grid sidebar</a></li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <a href="#">Masonry</a>
-                                    <ul>
-                                        <li><a href="blog-masonry-2cols.html">Masonry 2 columns</a></li>
-                                        <li><a href="blog-masonry-3cols.html">Masonry 3 columns</a></li>
-                                        <li><a href="blog-masonry-4cols.html">Masonry 4 columns</a></li>
-                                        <li><a href="blog-masonry-sidebar.html">Masonry sidebar</a></li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <a href="#">Mask</a>
-                                    <ul>
-                                        <li><a href="blog-mask-grid.html">Blog mask grid</a></li>
-                                        <li><a href="blog-mask-masonry.html">Blog mask masonry</a></li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <a href="#">Single Post</a>
-                                    <ul>
-                                        <li><a href="single.html">Default with sidebar</a></li>
-                                        <li><a href="single-fullwidth.html">Fullwidth no sidebar</a></li>
-                                        <li><a href="single-fullwidth-sidebar.html">Fullwidth with sidebar</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
                         </li>
                         <li>
                             <a href="elements-list.html" class="sf-with-ul">Elements</a>
@@ -470,10 +266,10 @@
                 </nav><!-- End .main-nav -->
             </div><!-- End .header-center -->
 
-            <div class="header-right">
+            <!-- <div class="header-right">
                 <i class="la la-lightbulb-o"></i>
                 <p>Clearance<span class="highlight">&nbsp;Up to 30% Off</span></p>
-            </div>
+            </div> -->
         </div><!-- End .container -->
     </div><!-- End .header-bottom -->
 </header><!-- End .header -->
