--- a/templates/base.html
+++ b/templates/base.html
@@ -269,6 +269,8 @@
     <!-- Main JS File -->
     <script src="{% static 'assets/js/main.js' %} "></script>
     <script src="{% static 'assets/js/demos/demo-4.js' %} "></script>
+    {% block javascript %} {% endblock javascript %}
+    
 </body>
 
 
