--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -22,7 +22,7 @@
         {% if not cart_items%}
         <h2 class="text-center">you shopping cart is empty</h2>
         <a href="{% url 'store:store' %}" class="btn btn-outline-dark-2 btn-block mb-3"><span>CONTINUE
-            SHOPPING</span><i class="icon-refresh"></i></a>
+                SHOPPING</span><i class="icon-refresh"></i></a>
 
         {% else %}
 
@@ -142,9 +142,18 @@
                                     </tr><!-- End .summary-total -->
                                 </tbody>
                             </table><!-- End .table table-summary -->
+                            {% if user.is_authenticated %}
 
-                            <a href="{% url 'cart:checkout' %}" class="btn btn-outline-primary-2 btn-order btn-block">PROCEED TO
+                            <a href="{% url 'cart:checkout' %}"
+                                class="btn btn-outline-primary-2 btn-order btn-block">PROCEED TO
                                 CHECKOUT</a>
+
+                            {% else %}
+                            <a href="#signin-modal" data-toggle="modal"
+                                class="btn btn-outline-primary-2 btn-order btn-block">PROCEED TO
+                                CHECKOUT</a>
+
+                            {% endif %}
                         </div><!-- End .summary -->
 
                         <a href="{% url 'store:store' %}" class="btn btn-outline-dark-2 btn-block mb-3"><span>CONTINUE
