--- a/cart/templates/cart/checkout.html
+++ b/cart/templates/cart/checkout.html
@@ -118,8 +118,8 @@
                                 </table><!-- End .table table-summary -->
 
                                 <button type="submit" class="btn btn-outline-primary-2 btn-order btn-block">
-                                    <span class="btn-text">Place Order</span>
-                                    <span class="btn-hover-text">Proceed to Checkout</span>
+                                    <!-- <span class="btn-text">Place Order</span> -->
+                                    Proceed to Checkout
                                 </button>
                             </div><!-- End .summary -->
                         </aside><!-- End .col-lg-3 -->
