--- a/orders/templates/orders/payments.html
+++ b/orders/templates/orders/payments.html
@@ -70,7 +70,7 @@
                                         <td class="price-col">Rs. {{cart_item.product.price}}</td>
                                         <td class="price-col">{{ cart_item.quantity }}</td>
 
-                                
+
                                         <td class="total-col">Rs. {{cart_item.sub_total}}</td>
 
                                     </tr>
@@ -110,7 +110,7 @@
                                     </tr><!-- End .summary-total -->
                                 </tbody>
                             </table><!-- End .table table-summary -->
-                            
+
                             <div class="accordion-summary" id="accordion-payment">
                                 <div class="card">
                                     <div class="card-header">
@@ -120,7 +120,7 @@
                                             </a>
                                         </h2>
                                     </div><!-- End .card-header -->
-                                    
+
                                 </div><!-- End .card -->
 
 
@@ -128,7 +128,7 @@
 
                             </div><!-- End .accordion -->
 
-                            <button type="submit" class="btn btn-outline-primary-2 btn-order btn-block">
+                            <button onclick="sendData()" class="btn btn-outline-primary-2 btn-order btn-block">
                                 Order
                                 <!-- <span class="btn-hover-text">Proceed to Checkout</span> -->
                             </button>
@@ -141,3 +141,56 @@
 </main><!-- End .main -->
 
 {% endblock content%}
+
+{% block javascript %}
+<script>
+    function getCookie(name) {
+        let cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            const cookies = document.cookie.split(';');
+            for (let i = 0; i < cookies.length; i++) {
+                const cookie = cookies[i].trim();
+                // Does this cookie string begin with the name we want?
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+
+    var amount = "{{ grand_total }}"
+    var url = "{% url 'orders:payments' %}"
+    var csrftoken = getCookie('csrftoken');
+    var orderID = "{{order.order_number}}"
+    var payment_method = 'cash on delivery'
+    var redirect_url = "{% url 'orders:order_complete' %}"
+
+    function sendData() {
+        
+        fetch(url, {
+            method: "POST",
+            headers: {
+                "Content-type": "application/json",
+                "X-CSRFToken": csrftoken,
+            },
+            body: JSON.stringify({
+                orderID: orderID,
+                transID: orderID,
+                payment_method: payment_method,
+                status: "due",
+            }),
+        })
+            .then((response) => response.json())
+            .then((data) => {
+                alert("saved");
+                // window.location.href = redirect_url + '?order_number=' + data.order_number + '&payment_id=' + data.transID;
+            });
+    }
+
+
+
+</script>
+
+{% endblock javascript %}
