--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -26,8 +26,9 @@
             <div class="row">
                 <div class="col-sm-6 col-lg-3">
                     <div class="widget widget-about">
-                        <img src="{% static 'assets/images/demos/demo-4/logo-footer.png ' %}" class="footer-logo" alt="Footer Logo" width="105" height="25">
-                        <p>Praesent dapibus, neque id cursus ucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. </p>
+                        <!-- <img src="{% static 'assets/images/demos/demo-4/logo-footer.png ' %}" class="footer-logo" alt="Footer Logo" width="105" height="25"> -->
+                        <h3>Smart Baje</h3>
+                        <p>contains description About e-commerce site</p>
 
                         <div class="widget-call">
                             <i class="icon-phone"></i>
@@ -85,7 +86,7 @@
 
     <div class="footer-bottom">
         <div class="container">
-            <p class="footer-copyright">Copyright © 2019 Molla Store. All Rights Reserved.</p><!-- End .footer-copyright -->
+            <p class="footer-copyright">Copyright © 2021 Smart Baje. All Rights Reserved.</p><!-- End .footer-copyright -->
             <figure class="footer-payments">
                 <img src="{% static 'assets/images/payments.png' %}" alt="Payment methods" width="272" height="20">
             </figure><!-- End .footer-payments -->
