--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -1,6 +1,6 @@
 {% load static %}
 <header class="header header-intro-clearance header-4">
-    <div class="header-top">
+    <div class="header-top" style="padding-top: 10px;">
         <div class="container">
             <div class="header-left">
                 <a href="tel:#"><i class="icon-phone"></i>Call: +0123 456 789</a>
@@ -8,22 +8,10 @@
 
             <div class="header-right">
 
-                <ul class="top-menu">
+                <ul class="top-menu" >
                     <li>
                         <a href="#">Links</a>
                         <ul>
-                            <li>
-                                <div class="header-dropdown">
-                                    <a href="#">USD</a>
-                                    <div class="header-menu">
-                                        <ul>
-                                            <li><a href="#">Eur</a></li>
-                                            <li><a href="#">Usd</a></li>
-                                        </ul>
-                                    </div><!-- End .header-menu -->
-                                </div>
-                            </li>
-                            
                             {% if user.id is None%}
 
                             <li><a href="#signin-modal" data-toggle="modal">Sign in / Sign up</a></li>
@@ -49,7 +37,8 @@
                 </button>
 
                 <a href="index.html" class="logo">
-                    <img src="{% static 'assets/images/demos/demo-4/logo.png' %}" alt="Molla Logo" width="105" height="25">
+                    <!-- <img src="{% static 'assets/images/demos/demo-4/logo.png' %}" alt="Molla Logo" width="105" height="25"> -->
+                    <h3 style="margin-top: 8px;">Smart Baje</h3>
                 </a>
             </div><!-- End .header-left -->
 
