unused code pushed for test only

--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -1,6 +1,6 @@
 {% load static %}
 <header class="header header-intro-clearance header-4">
-    <div class="header-top" style="padding-top: 10px;">
+    <div class="header-top" style="padding-top: 10px; font-size: 18px;">
         <div class="container">
             <div class="header-left">
                 <a href="tel:#"><i class="icon-phone"></i>Call: +0123 456 789</a>
