login and logout card product addition managed

--- a/accounts/templates/account_verification_email.html
+++ b/accounts/templates/account_verification_email.html
@@ -1,6 +1,6 @@
 {% autoescape off %}
 
-Hi {{user.first_name}},
+Hi {{user.full_name}},
 
 Please click on below link to confirm your registration.
 http://{{domain}}{% url 'auth:activate' uidb64=uid token=token %}
