--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -1,60 +1,27 @@
-{% load static %}
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
+<div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
 
-    <link rel="stylesheet" href='{% static "assets/register/fonts/icomoon/style.css" %}'>
+  <div class="card-body">
+  <h4 class="card-title mb-4">Sign in</h4>
+  {% include 'base/alerts.html' %}
+  <form action="{% url 'auth:login' %}" method="POST">
+    {% csrf_token %}
+      <div class="form-group">
+         <input type="email" class="form-control" placeholder="Email Address" name="email">
+      </div> <!-- form-group// -->
+      <div class="form-group">
+        <input type="password" class="form-control" placeholder="Password" name="password">
+      </div> <!-- form-group// -->
 
-    <link rel="stylesheet" href='{% static "assets/register/css/owl.carousel.min.css" %}'>
+      <div class="form-group">
+          <a href="" class="float-right">Forgot password?</a>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href='{% static "assets/register/css/bootstrap.min.css" %}'>
-    
-    <!-- Style -->
-    <link rel="stylesheet" href='{% static "assets/register/css/style.css" %}'>
-    <title>Login #5</title>
-  </head>
-  <body>
-  
+      </div> <!-- form-group form-check .// -->
+      <div class="form-group">
+          <button type="submit" class="btn btn-primary btn-block"> Login  </button>
+      </div> <!-- form-group// -->
+  </form>
+  </div> <!-- card-body.// -->
+</div> <!-- card .// -->
 
-  <div class="d-md-flex half">
-    <div class="bg" style="background-image: url('{% static "assets/images/bg_1.jpg" %}'); "></div>
-    <div class="contents">
-
-      <div class="container">
-        <div class="row align-items-center justify-content-center">
-          <div class="col-md-12">
-            <div class="form-block mx-auto">
-              <div class="text-center mb-5">
-                <h3 class="text-uppercase">Register to <strong>SmartBaje</strong></h3>
-              </div>
-              <form action="#" method="post">
-            
-                {% csrf_token %}
-                {{form}}
-                
-                
-                <br>
-                <input type="submit" value="Register" class="btn btn-block py-2 btn-primary">
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    
-  </div>
-    
-    
-
-    <script src='{% static "assets/js/register/jquery-3.3.1.min.js" %}'></script>
-    <script src='{% static "assets/js/register/popper.min.js" %}'></script>
-    <script src='{% static "assets/js/register/bootstrap.min.js" %}'></script>
-    <script src='{% static "assets/js/register/main.js" %}'></script>
-  </body>
-</html>
+ <p class="text-center mt-4">Don't have account? <a href="{% url 'auth:register' %}">Sign up</a></p>
+ <br><br>
