--- a/templates/modal/signin.html
+++ b/templates/modal/signin.html
@@ -1,6 +1,5 @@
 {% load static %}
 <!-- {% load socialaccount %} -->
-<!-- {% providers_media_js %} -->
 <!-- Sign in / Register Modal -->
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v12.0&appId=1731712226874269&autoLogAppEvents=1" nonce="RCEcxcBp"></script>
@@ -27,6 +26,7 @@
                             <div class="tab-pane fade show active" id="signin" role="tabpanel"
                                 aria-labelledby="signin-tab">
                                 <form action="#" method="POST">
+                                    {% csrf_token %}
                                     <div class="form-group">
                                         <label for="singin-email">Email address *</label>
                                         <input type="text" class="form-control" id="singin-email" name="email" required>
@@ -77,14 +77,35 @@
                             </div><!-- .End .tab-pane -->
 
                             <div class="tab-pane fade" id="register" role="tabpanel" aria-labelledby="register-tab">
-                                {% include 'base/alerts.html' %}
-                                <form action="{% url 'auth:register' %}" method="post">
+                                <form id="register_form" action="#" method="post">
                                     {% csrf_token %}
+                                    <div class="form-group">
+                                        <label for="register-fullname">Full Name *</label>
+                                        <input type="text" class="form-control" id="register-fullname" name="full_name" required>
+                                    </div><!-- End .form-group -->
 
-                                    {{form}}
+                                    <div class="form-group">
+                                        <label for="register-email">Email address *</label>
+                                        <input type="text" class="form-control" id="register-email" name="email" required>
+                                    </div><!-- End .form-group -->
+
+                                    <div class="form-group">
+                                        <label for="register-password1">Password *</label>
+                                        <input type="password" class="form-control" id="register-password1" name="password"
+                                            required>
+                                    </div><!-- End .form-group -->
+
+                                    <div class="form-group">
+                                        <label for="register-password2">Confirm Password *</label>
+                                        <input type="password" class="form-control" id="register-password2" name="password2"
+                                            required>
+                                    </div>
+                                    <!-- End .form-group -->
+
+
                                     <div class="form-choice">
                                         <div class="col-sm-6">
-                                            <button type="submit" id="register" class="btn btn-outline-primary-2">
+                                            <button type="submit" id="signup" class="btn btn-outline-primary-2">
                                                 <span>Register</span>
                                                 <i class="icon-long-arrow-right"></i>
                                             </button>
@@ -136,8 +157,39 @@
                 'password': password,
             },
             success:function(data){
+                console.log(data)
                 location.reload();
             }
+
+        });
+
+    });
+
+    $('#register_form').submit(function (e) {
+        e.preventDefault();
+        e.stopPropagation();
+        var full_name = $.trim($('#register-fullname').val());
+        var email = $.trim($('#register-email').val());
+        var password = $.trim($('#register-password1').val());
+        var confirm_password = $.trim($('#register-password2').val());
+        const csrftoken = getCookie('csrftoken');
+
+        $.ajax({
+            type: "POST",
+            url: "{% url 'auth:register' %}",
+            data: {
+                'csrfmiddlewaretoken': csrftoken,
+                'full_name': full_name,
+                'email': email,
+                'password': password,
+                'confirm_password': confirm_password,
+
+            },
+            success:function(message){   
+                alert(message.message);
+                // location.reload();
+            },
+            
 
         });
 
