message timeout added

--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -340,5 +340,9 @@
             this.className += " active";
             });
         }
+        setTimeout(function(){
+        $('#message').fadeOut('medium')
+    }, 2500)
     </script>
+    
 {% endblock javascript %}>
