--- a/templates/modal/signin.html
+++ b/templates/modal/signin.html
@@ -187,7 +187,7 @@
             },
             success:function(message){   
                 alert(message.message);
-                // location.reload();
+                location.reload();
             },
             
 
