added: user profile|message timeout js in templates

--- a/accounts/templates/dashboard.html
+++ b/accounts/templates/dashboard.html
@@ -51,3 +51,11 @@
 </div>
 
 {% endblock content%}
+{% block javascript %} 
+   <script type="application/javascript">
+       setTimeout(function(){
+       $('#message').fadeOut('medium')
+   }, 2500)
+   </script>
+   
+{% endblock javascript %}>
