--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -166,3 +166,11 @@
     </div><!-- End .page-content -->
 </main><!-- End .main -->
 {% endblock content%}
+{% block javascript %} 
+   <script type="application/javascript">
+       setTimeout(function(){
+       $('#message').fadeOut('medium')
+   }, 2500)
+   </script>
+   
+{% endblock javascript %}>
