--- a/cart/templates/cart/checkout.html
+++ b/cart/templates/cart/checkout.html
@@ -131,3 +131,11 @@
 </main><!-- End .main -->
 
 {% endblock content%}
+{% block javascript %} 
+   <script type="application/javascript">
+       setTimeout(function(){
+       $('#message').fadeOut('medium')
+   }, 2500)
+   </script>
+   
+{% endblock javascript %}>
