--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -161,7 +161,7 @@
                    <div class="heading-right" id="mycatlinks">
                         <ul class="nav nav-pills nav-border-anim justify-content-center" role="tablist">
                             <li class="nav-item">
-                                <a class="nav-link active" href="{% url 'store:store' %}">All</a>
+                                <a class="nav-link" href="{% url 'store:store' %}">All</a>
                             </li>
                             {% for category in links %}
                             <li class="nav-item">
