--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -21,7 +21,16 @@
         </div> <!-- form-group// -->
     </form>
     </div> <!-- card-body.// -->
-  </div> <!-- card .// -->
+</div> <!-- card .// -->
 
    <p class="text-center mt-4">Don't have account? <a href="{% url 'auth:register' %}">Sign up</a></p>
    <br><br>
+   
+{% block javascript %} 
+   <script type="application/javascript">
+       setTimeout(function(){
+       $('#message').fadeOut('medium')
+   }, 2500)
+   </script>
+   
+{% endblock javascript %}>
