slight changes in profile

--- a/accounts/templates/editprofile.html
+++ b/accounts/templates/editprofile.html
@@ -13,7 +13,7 @@
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="{% url 'store:store' %}">Home</a></li>
                 <li class="breadcrumb-item"><a href="#">Account</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Proile</li>
+                <li class="breadcrumb-item active" aria-current="page">Profile</li>
             </ol>
         </div><!-- End .container -->
     </nav><!-- End .breadcrumb-nav -->
