--- a/accounts/templates/dashboard.html
+++ b/accounts/templates/dashboard.html
@@ -7,6 +7,8 @@
 	<aside class="col-md-3">
 		<!--   SIDEBAR   -->
 		<ul class="list-group">
+
+			<a class="list-group-item" href="{% url 'auth:userprofile' %}"> Profile </a>
 			<a class="list-group-item" href="#"> My order history </a>
 			<a class="list-group-item" href="#"> Transactions </a>
 			<!-- <a class="list-group-item" href="#"> Return and refunds </a> -->
